[gd_scene load_steps=5 format=2]

[ext_resource path="res://Game/ReturnToTitle.gd" type="Script" id=1]
[ext_resource path="res://Buttons/BalooChettan27.tres" type="DynamicFont" id=2]
[ext_resource path="res://Buttons/OK.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fade_in/FadeIn.tscn" type="PackedScene" id=4]

[node name="NewGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 69.9299
margin_top = 85.0351
margin_right = -90.0701
margin_bottom = -74.9649

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 419.0
margin_top = 195.0
margin_right = 700.0
margin_bottom = 365.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 281.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0.933333, 0.811765, 0.392157, 1 )
text = "New Game Screen"

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 281.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 2 )
text = "Back"
flat = true

[node name="OK" parent="CenterContainer/VBoxContainer" instance=ExtResource( 3 )]
flat = true
scene_to_load = "res://Game/NiceGames.tscn"

[node name="FadeIn" parent="." instance=ExtResource( 4 )]
visible = false

[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="fade_finish" from="FadeIn" to="." method="_on_FadeIn_fade_finish"]
